workspace = { members = ["stttwmdtt_derive"] }
[package]
name = "stttwmdtt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
stttwmdtt_derive = { path = "./stttwmdtt_derive" }
bevy = { version = "0.12.0", features = ["dynamic_linking"] }
#bevy = "0.12.0"